Bug 1888634 - Disallow captureStream with canvas transferred to DOM worker. r=gfx-reviewers,lsalzman

This behaviour has yet to be defined by the spec and/or WPT, see:

https://github.com/w3c/mediacapture-fromelement/issues/65
https://github.com/w3c/mediacapture-extensions/pull/26
https://github.com/web-platform-tests/wpt/issues/21102

Differential Revision: https://phabricator.services.mozilla.com/D207582